Programme + half list

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,21 +1,19 @@
 @import url(colours.css);
-@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
-.questrial-regular {
-  font-family: "Questrial", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  }
+@font-face {
+  font-family: 'LEMONMILK-Regular';
+  src: url('/font/LEMONMILK-Regular.ttf');
+}
   
 
 body {
   background-color: var(--bg_colour);
-  font-family: "Questrial", sans-serif;
+  font-family: "LEMONMILK-Regular", sans-serif;
   color: var(--text_colour);
 }
 
 p {
-  font-size: 20px;
+  font-size: 14px;
   text-align: left;
 }
 
@@ -35,6 +33,7 @@ header {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  font-size: 14px;
 }
 
 .header_logotext {
@@ -90,17 +89,18 @@ footer {
 
 .text-content {
   margin: auto;
-  width: 70%;
+  width: 1280px;
+  max-width: 85%;
 }
 
 .text-content > p {
   text-align: justify;
-  font-size: 24px;  
+  font-size: 18px;  
 }
 
 .page-header {
   text-align: center;
-  font-size: 50px;
+  font-size: 40px;
 }
 
 .undertitle {
@@ -109,7 +109,7 @@ footer {
 
 .articles-list {
   margin: auto;
-  width: fit-content;
+  width: 85%;
   max-width: 365px;
 }
 
@@ -125,4 +125,15 @@ footer {
 
 .articles-list > a > p {
   text-align: justify;
+}
+
+.list-content {
+  width: 85%;
+  max-width: 700px;
+  margin: auto;
+}
+
+.list-entry > p {
+  text-align: justify;
+  font-size: 18px;
 }
